# HttpServer

./: CMakeLists.txt
HttpServer/: HttpServer.sln
HttpServer/HttpServer/: CMakeLists.txt  HttpServer.cpp  HttpServer.vcxproj  HttpServer.vcxproj.filters  Server.cpp  Server.h  WorkersPool.cpp  WorkersPool.h  asio.hpp  cmake_install.cmake  connection.cpp  connection.hpp  reply.hpp  request_handler.cpp  stdafx.h
HttpServer/HttpServer/asio/: basic_socket_streambuf.hpp
HttpServer/HttpServer/asio/detail/: config.hpp
